Dark mode styling fixes

--- a/index.css
+++ b/index.css
@@ -81,7 +81,7 @@ html, body {
 }
 
 .logo-image.dark-mode {
-    filter: invert(.706);    
+    filter: invert(.7065);    
 }
 
 .user-avatar {
@@ -122,6 +122,7 @@ html, body {
 
 .icon {
     height: 100%;
+    /* width: 23px; */
 }
 
 .icon:hover {
@@ -129,11 +130,15 @@ html, body {
 }
 
 .icon.dark-mode {
-    filter: invert(.9);    
+    filter: brightness(0) saturate(100%) invert(80%) sepia(0%) saturate(667%) hue-rotate(165deg) brightness(110%) contrast(81%);        
 }
 
 .red-heart {
-    filter: hue-rotate(10deg);
+    filter: brightness(0) saturate(100%) invert(19%) sepia(73%) saturate(3947%) hue-rotate(338deg) brightness(94%) contrast(93%);
+}
+
+.red-heart.dark-mode {
+    filter: brightness(0) saturate(100%) invert(54%) sepia(81%) saturate(1269%) hue-rotate(310deg) brightness(101%) contrast(88%);
 }
 
 .post-text {
@@ -173,8 +178,9 @@ html, body {
     opacity: 0%;
 }
 
+/* flex when displayed */
 .comments-modal{
-    display: none; /*flex when displayed*/
+    display: none; 
     position: fixed;
     margin: auto;
     bottom: 0px;
@@ -183,7 +189,7 @@ html, body {
     right: 0;
     border-radius: 20px 20px 0px 0px;
     width: var(--width);
-    height: 490px;
+    height: 60vh;
     background-color: var(--ui-background-color);
     overflow-y: auto;
     padding-top: 3.5em;
